# dm-vio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
configs/: 4seasons.yaml  euroc.yaml  oakd_noise_tumvi.yaml  pcalib_linear_8bit.txt  t265_noise_tumvi.yaml  tumvi.yaml
configs/4seasons_calib/: camchain.yaml  cropped_calib304.txt  undistorted_calib304.txt
configs/ablations/: 4seasonsNoInitialReadvancing.yaml  4seasonsNoPGBA.yaml  4seasonsNoReinitAndMargReplacement.yaml
configs/euroc/: camera.txt
configs/oakd_calib/: camchain.yaml  camera_left.txt
configs/tumvi_calib/: camchain.yaml  camera02.txt  pcalib.txt
doc/: RealsenseLiveVersion.md
src/: main_dmvio_dataset.cpp  main_dmvio_oakd.cpp  main_dmvio_t265.cpp
src/GTSAMIntegration/: AugmentedScatter.cpp  AugmentedScatter.hpp  BAGTSAMIntegration.cpp  BAGTSAMIntegration.h  DelayedMarginalization.cpp  DelayedMarginalization.h  ExtUtils.h  FEJNoiseModelFactor.h  FEJValues.cpp  FEJValues.h  GTSAMUtils.cpp  GTSAMUtils.h  Marginalization.cpp  Marginalization.h  PoseTransformation.cpp  PoseTransformation.h  PoseTransformationFactor.cpp  PoseTransformationFactor.h  PoseTransformationIMU.cpp  PoseTransformationIMU.h  Sim3GTSAM.cpp  Sim3GTSAM.h
src/IMU/: BAIMULogic.cpp  BAIMULogic.h  CoarseIMULogic.cpp  CoarseIMULogic.h  IMUIntegration.cpp  IMUIntegration.hpp  IMUSettings.cpp  IMUSettings.h  IMUTypes.cpp  IMUTypes.h  IMUUtils.cpp  IMUUtils.h
src/IMUInitialization/: CoarseIMUInitOptimizer.cpp  CoarseIMUInitOptimizer.h  GravityInitializer.cpp  GravityInitializer.h  IMUInitSettings.cpp  IMUInitSettings.h  IMUInitStateChanger.h  IMUInitializer.cpp  IMUInitializer.h  IMUInitializerLogic.cpp  IMUInitializerLogic.h  IMUInitializerStates.cpp  IMUInitializerStates.h  IMUInitializerTransitions.cpp  IMUInitializerTransitions.h  PoseGraphBundleAdjustment.cpp  PoseGraphBundleAdjustment.h
src/dso/: README.md
src/dso/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  ImmaturePoint.h  PixelSelector.h  PixelSelector2.cpp  PixelSelector2.h  ResidualProjections.h  Residuals.cpp  Residuals.h
src/dso/IOWrapper/: ImageDisplay.h  ImageDisplay_dummy.cpp  ImageRW.h  ImageRW_dummy.cpp  Output3DWrapper.h
src/dso/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp  ImageRW_OpenCV.cpp
src/dso/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
src/dso/IOWrapper/Pangolin/: FollowCamMode.cpp  FollowCamMode.h  KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/dso/OptimizationBackend/: AccumulatedSCHessian.cpp  AccumulatedSCHessian.h  AccumulatedTopHessian.cpp  AccumulatedTopHessian.h  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  EnergyFunctionalStructs.h  MatrixAccumulators.h  RawResidualJacobian.h
src/dso/util/: DatasetReader.h  FrameShell.h  ImageAndExposure.h  IndexThreadReduce.h  MinimalImage.h  NumType.h  Undistort.cpp  Undistort.h  globalCalib.cpp  globalCalib.h  globalFuncs.h  nanoflann.h  settings.cpp  settings.h
src/live/: DatasetSaver.cpp  DatasetSaver.h  FrameContainer.cpp  FrameContainer.h  FrameSkippingStrategy.cpp  FrameSkippingStrategy.h  IMUInterpolator.cpp  IMUInterpolator.h  OakdS2.cpp  OakdS2.h  RealsenseT265.cpp  RealsenseT265.h
src/util/: GTData.hpp  MainSettings.cpp  MainSettings.h  SettingsUtil.cpp  SettingsUtil.h  TimeMeasurement.cpp  TimeMeasurement.h
test/: CMakeLists.txt  test_IMUInterpolator.cpp  test_PoseTransformationFactor.cpp
